--- a/Vacation.ipynb
+++ b/Vacation.ipynb
@@ -74,6 +74,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from IPython.display import HTML"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
