--- a/Vacation.ipynb
+++ b/Vacation.ipynb
@@ -67,17 +67,51 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "According to Luiza, this is the best way to enjoy vacations. :-)"
+    "from IPython.display import YouTubeVideo\n",
+    "video = YouTubeVideo (\"kDRSYfdhmg8&t=1s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"400\"\n",
+       "            height=\"300\"\n",
+       "            src=\"https://www.youtube.com/embed/kDRSYfdhmg8&t=1s\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x7fd6a10bec10>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "from IPython.display import HTML"
+    "According to Luiza, this is the best way to enjoy vacations. :-)"
    ]
   },
   {
