--- a/LAB_Python_Strings.ipynb
+++ b/LAB_Python_Strings.ipynb
@@ -92,16 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-49-bc35599a3f87>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-bc35599a3f87>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    f\"The area of the circle with radius: {radius}\", \"is\" {area}\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'The area of the circle with radius: 4.5 is 63.61725123519331'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -113,9 +115,7 @@
     "pi = math.pi\n",
     "area= pi*radius**2\n",
     "# Your code here:\n",
-    "f\"The area of the circle with radius: {radius}\", \"is\" {area}\n",
-    "\n",
-    "#f'The value is {value}.'"
+    "f\"The area of the circle with radius: {radius} is {area}\""
    ]
   },
   {
