--- a/LAB_Python_Strings.ipynb
+++ b/LAB_Python_Strings.ipynb
@@ -63,22 +63,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grocery list: Bananas, Chocolate, bread, diapers, Ice Cream, Brownie Mix, broccoli.\n"
+      "Grocery list:  bananas, bread, brownie mix, broccoli.\n"
      ]
     }
    ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
     "# Your code here:\n",
-    "g = \"Grocery list: \" + \", \".join(food_list)\n",
-    "print(g + \".\")"
+    "g = []\n",
+    "for item in food_list:\n",
+    "    if item[0] == 'b' or item[0] == 'B':\n",
+    "        g.append(item.lower())\n",
+    "x = \", \".join(g) + \".\"        \n",
+    "print (\"Grocery list: \", x) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(g)"
    ]
   },
   {
