--- a/Lab_Duel-Of-Sorcerers.ipynb
+++ b/Lab_Duel-Of-Sorcerers.ipynb
@@ -66,16 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n",
-      "5\n",
-      "Gandalf wins\n"
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-115-5d11833afb50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0msaruman\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mgandalf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0msaruman_wins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msaruman_wins\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgandalf_wins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msaruman_wins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
      ]
     }
    ],
@@ -84,14 +86,14 @@
     "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
     "spells = len(gandalf)\n",
     "    \n",
-    "gandalf_wins = [0]\n",
-    "saruman_wins = [0]\n",
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0\n",
     "\n",
     "for i in range(spells):\n",
     "    if gandalf[i] > saruman[i]:\n",
-    "        gandalf_wins = gandalf_wins + [1]\n",
+    "        gandalf_wins = gandalf_wins + 1\n",
     "    elif saruman[i] > gandalf[i]:\n",
-    "        saruman_wins = saruman_wins + [1]\n",
+    "        saruman_wins = saruman_wins + 1\n",
     "print(len(gandalf_wins))\n",
     "print(len(saruman_wins))\n",
     "        \n",
@@ -237,6 +239,53 @@
     "                gendalf_wins += 1\n",
     "            else:\n",
     "                saruman_wins += 1\n",
+    "                \n",
+    "    elif saruman_power[spells] > gandalf_power[spells]:\n",
+    "        saruman_wins  += 1\n",
+    "        while saruman_wins in [1,2]:\n",
+    "            spells  += 1\n",
+    "            if saruman_power[spells] > gandald_power[spells]:\n",
+    "                gendalf_wins += 1\n",
+    "            else:\n",
+    "                gandalf_wins += 1\n",
+    "    \n",
+    "if gandalf_wins > saruman_wins:\n",
+    "    print (\"Gandalf wins\")\n",
+    "elif saruman_wins > gandalf_wins:\n",
+    "    print (\"Saruman wins\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "while gandalf_wins != 3 and saruman_wins != 3:\n",
+    "    if gandalf_power[spells] > saruman_power[spells]:\n",
+    "        gandalf_wins += 1\n",
+    "        while gandalf_wins in [1,2]:\n",
+    "            spells  += 1\n",
+    "            if gandalf_power[spells] > saruman_power[spells]:\n",
+    "                gendalf_wins += 1\n",
+    "            else:\n",
+    "                gandalf_wins = 0\n",
+    "\n",
     "                \n",
     "    elif saruman_power[spells] > gandalf_power[spells]:\n",
     "        saruman_wins  += 1\n",
