--- a/Lab_Duel-Of-Sorcerers.ipynb
+++ b/Lab_Duel-Of-Sorcerers.ipynb
@@ -66,18 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-115-5d11833afb50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0msaruman\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mgandalf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0msaruman_wins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msaruman_wins\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgandalf_wins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msaruman_wins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "4\n",
+      "Gandalf wins\n"
      ]
     }
    ],
@@ -94,8 +92,8 @@
     "        gandalf_wins = gandalf_wins + 1\n",
     "    elif saruman[i] > gandalf[i]:\n",
     "        saruman_wins = saruman_wins + 1\n",
-    "print(len(gandalf_wins))\n",
-    "print(len(saruman_wins))\n",
+    "print(gandalf_wins)\n",
+    "print(saruman_wins)\n",
     "        \n",
     "if gandalf_wins > saruman_wins:\n",
     "    print(\"Gandalf wins\")\n",
