--- a/Lab_Pandas_part_1.ipynb
+++ b/Lab_Pandas_part_1.ipynb
@@ -2245,10 +2245,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Engine Displacement</th>\n",
+       "      <th>Cylinders</th>\n",
+       "      <th>Transmission</th>\n",
+       "      <th>Drivetrain</th>\n",
+       "      <th>Vehicle Class</th>\n",
+       "      <th>Fuel Type</th>\n",
+       "      <th>Fuel Barrels/Year</th>\n",
+       "      <th>City KPL</th>\n",
+       "      <th>Highway KPL</th>\n",
+       "      <th>Combined KPL</th>\n",
+       "      <th>CO2 Emission Grams/Km</th>\n",
+       "      <th>Fuel Cost/Year</th>\n",
+       "      <th>Transmission Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AM General</td>\n",
+       "      <td>DJ Po Vehicle 2WD</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Automatic 3-spd</td>\n",
+       "      <td>2-Wheel Drive</td>\n",
+       "      <td>Special Purpose Vehicle 2WD</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>19.388824</td>\n",
+       "      <td>42.33871</td>\n",
+       "      <td>39.98656</td>\n",
+       "      <td>39.98656</td>\n",
+       "      <td>841.306152</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AM General</td>\n",
+       "      <td>FJ8c Post Office</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Automatic 3-spd</td>\n",
+       "      <td>2-Wheel Drive</td>\n",
+       "      <td>Special Purpose Vehicle 2WD</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>25.354615</td>\n",
+       "      <td>13.00000</td>\n",
+       "      <td>13.00000</td>\n",
+       "      <td>13.00000</td>\n",
+       "      <td>1100.169583</td>\n",
+       "      <td>2550</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AM General</td>\n",
+       "      <td>Post Office DJ5 2WD</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Automatic 3-spd</td>\n",
+       "      <td>Rear-Wheel Drive</td>\n",
+       "      <td>Special Purpose Vehicle 2WD</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>20.600625</td>\n",
+       "      <td>16.00000</td>\n",
+       "      <td>17.00000</td>\n",
+       "      <td>16.00000</td>\n",
+       "      <td>893.887786</td>\n",
+       "      <td>2100</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AM General</td>\n",
+       "      <td>Post Office DJ8 2WD</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Automatic 3-spd</td>\n",
+       "      <td>Rear-Wheel Drive</td>\n",
+       "      <td>Special Purpose Vehicle 2WD</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>25.354615</td>\n",
+       "      <td>13.00000</td>\n",
+       "      <td>13.00000</td>\n",
+       "      <td>13.00000</td>\n",
+       "      <td>1100.169583</td>\n",
+       "      <td>2550</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ASC Incorporated</td>\n",
+       "      <td>GNX</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Automatic 4-spd</td>\n",
+       "      <td>Rear-Wheel Drive</td>\n",
+       "      <td>Midsize Cars</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>20.600625</td>\n",
+       "      <td>14.00000</td>\n",
+       "      <td>21.00000</td>\n",
+       "      <td>16.00000</td>\n",
+       "      <td>893.887786</td>\n",
+       "      <td>2550</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35947</th>\n",
+       "      <td>smart</td>\n",
+       "      <td>fortwo coupe</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Auto(AM5)</td>\n",
+       "      <td>Rear-Wheel Drive</td>\n",
+       "      <td>Two Seaters</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>9.155833</td>\n",
+       "      <td>34.00000</td>\n",
+       "      <td>38.00000</td>\n",
+       "      <td>36.00000</td>\n",
+       "      <td>392.678960</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35948</th>\n",
+       "      <td>smart</td>\n",
+       "      <td>fortwo coupe</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Auto(AM5)</td>\n",
+       "      <td>Rear-Wheel Drive</td>\n",
+       "      <td>Two Seaters</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>9.155833</td>\n",
+       "      <td>34.00000</td>\n",
+       "      <td>38.00000</td>\n",
+       "      <td>36.00000</td>\n",
+       "      <td>391.069620</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35949</th>\n",
+       "      <td>smart</td>\n",
+       "      <td>fortwo coupe</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Auto(AM5)</td>\n",
+       "      <td>Rear-Wheel Drive</td>\n",
+       "      <td>Two Seaters</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>9.155833</td>\n",
+       "      <td>34.00000</td>\n",
+       "      <td>38.00000</td>\n",
+       "      <td>36.00000</td>\n",
+       "      <td>392.678960</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35950</th>\n",
+       "      <td>smart</td>\n",
+       "      <td>fortwo coupe</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Auto(AM6)</td>\n",
+       "      <td>Rear-Wheel Drive</td>\n",
+       "      <td>Two Seaters</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>9.155833</td>\n",
+       "      <td>34.00000</td>\n",
+       "      <td>39.00000</td>\n",
+       "      <td>36.00000</td>\n",
+       "      <td>395.897640</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35951</th>\n",
+       "      <td>smart</td>\n",
+       "      <td>fortwo coupe</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Manual 5-spd</td>\n",
+       "      <td>Rear-Wheel Drive</td>\n",
+       "      <td>Two Seaters</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>9.417429</td>\n",
+       "      <td>32.00000</td>\n",
+       "      <td>39.00000</td>\n",
+       "      <td>35.00000</td>\n",
+       "      <td>410.381700</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>Manual</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>35952 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Make                Model  Year  Engine Displacement  \\\n",
+       "0            AM General    DJ Po Vehicle 2WD  1984                  2.5   \n",
+       "1            AM General     FJ8c Post Office  1984                  4.2   \n",
+       "2            AM General  Post Office DJ5 2WD  1985                  2.5   \n",
+       "3            AM General  Post Office DJ8 2WD  1985                  4.2   \n",
+       "4      ASC Incorporated                  GNX  1987                  3.8   \n",
+       "...                 ...                  ...   ...                  ...   \n",
+       "35947             smart         fortwo coupe  2013                  1.0   \n",
+       "35948             smart         fortwo coupe  2014                  1.0   \n",
+       "35949             smart         fortwo coupe  2015                  1.0   \n",
+       "35950             smart         fortwo coupe  2016                  0.9   \n",
+       "35951             smart         fortwo coupe  2016                  0.9   \n",
+       "\n",
+       "       Cylinders     Transmission        Drivetrain  \\\n",
+       "0            4.0  Automatic 3-spd     2-Wheel Drive   \n",
+       "1            6.0  Automatic 3-spd     2-Wheel Drive   \n",
+       "2            4.0  Automatic 3-spd  Rear-Wheel Drive   \n",
+       "3            6.0  Automatic 3-spd  Rear-Wheel Drive   \n",
+       "4            6.0  Automatic 4-spd  Rear-Wheel Drive   \n",
+       "...          ...              ...               ...   \n",
+       "35947        3.0        Auto(AM5)  Rear-Wheel Drive   \n",
+       "35948        3.0        Auto(AM5)  Rear-Wheel Drive   \n",
+       "35949        3.0        Auto(AM5)  Rear-Wheel Drive   \n",
+       "35950        3.0        Auto(AM6)  Rear-Wheel Drive   \n",
+       "35951        3.0     Manual 5-spd  Rear-Wheel Drive   \n",
+       "\n",
+       "                     Vehicle Class Fuel Type  Fuel Barrels/Year  City KPL  \\\n",
+       "0      Special Purpose Vehicle 2WD   Regular          19.388824  42.33871   \n",
+       "1      Special Purpose Vehicle 2WD   Regular          25.354615  13.00000   \n",
+       "2      Special Purpose Vehicle 2WD   Regular          20.600625  16.00000   \n",
+       "3      Special Purpose Vehicle 2WD   Regular          25.354615  13.00000   \n",
+       "4                     Midsize Cars   Premium          20.600625  14.00000   \n",
+       "...                            ...       ...                ...       ...   \n",
+       "35947                  Two Seaters   Premium           9.155833  34.00000   \n",
+       "35948                  Two Seaters   Premium           9.155833  34.00000   \n",
+       "35949                  Two Seaters   Premium           9.155833  34.00000   \n",
+       "35950                  Two Seaters   Premium           9.155833  34.00000   \n",
+       "35951                  Two Seaters   Premium           9.417429  32.00000   \n",
+       "\n",
+       "       Highway KPL  Combined KPL  CO2 Emission Grams/Km  Fuel Cost/Year  \\\n",
+       "0         39.98656      39.98656             841.306152            1950   \n",
+       "1         13.00000      13.00000            1100.169583            2550   \n",
+       "2         17.00000      16.00000             893.887786            2100   \n",
+       "3         13.00000      13.00000            1100.169583            2550   \n",
+       "4         21.00000      16.00000             893.887786            2550   \n",
+       "...            ...           ...                    ...             ...   \n",
+       "35947     38.00000      36.00000             392.678960            1100   \n",
+       "35948     38.00000      36.00000             391.069620            1100   \n",
+       "35949     38.00000      36.00000             392.678960            1100   \n",
+       "35950     39.00000      36.00000             395.897640            1100   \n",
+       "35951     39.00000      35.00000             410.381700            1150   \n",
+       "\n",
+       "      Transmission Type  \n",
+       "0                  Auto  \n",
+       "1                  Auto  \n",
+       "2                  Auto  \n",
+       "3                  Auto  \n",
+       "4                  Auto  \n",
+       "...                 ...  \n",
+       "35947              Auto  \n",
+       "35948              Auto  \n",
+       "35949              Auto  \n",
+       "35950              Auto  \n",
+       "35951            Manual  \n",
+       "\n",
+       "[35952 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def check_transmission(name):\n",
+    "    if name.startswith(\"A\"):\n",
+    "        return \"Auto\"\n",
+    "    else:\n",
+    "        return \"Manual\"\n",
+    "    \n",
+    "vh[\"Transmission Type\"] = vh.Transmission.apply(check_transmission)\n",
+    "vh"
+   ]
   },
   {
    "cell_type": "markdown",
