--- a/LAB_Python_Strings.ipynb
+++ b/LAB_Python_Strings.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,13 +96,40 @@
        "list"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery_list: bananas; bread; brownie mix; broccoli\n"
+     ]
+    }
+   ],
+   "source": [
+    "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
+    "\n",
+    "new_list = \"Grocery_list: \" + \"; \".join(food.lower() for food in food_list if food[0]== \"b\" or food[0]== \"B\")\n",
+    "print(new_list)"
    ]
   },
   {
@@ -155,9 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "{'I': 3, 'for': 1, 'favor': 1, 'know': 1, 'with': 1, 'twice,': 1, 'suffice.': 1, 'if': 1, 'fire.': 1, 'end': 1, 'enough': 1, 'to': 1, 'who': 1, 'I’ve': 1, 'perish': 1, 'of': 2, 'Is': 1, 'had': 1, 'say': 3, 'tasted': 1, 'the': 1, 'will': 1, 'desire': 1, 'From': 1, 'think': 1, 'destruction': 1, 'in': 2, 'But': 1, 'Some': 2, 'world': 1, 'ice.': 1, 'would': 1, 'what': 1, 'fire,': 1, 'ice': 1, 'great': 1, 'hold': 1, 'it': 1, 'To': 1, 'hate': 1, 'And': 1, 'those': 1, 'that': 1, 'also': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -169,7 +206,18 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "poem_lst = poem.split(\",\")\n",
+    "poem_lst = poem.split()\n",
+    "#print(poem_lst)\n",
+    "print('\\n')\n",
+    "set1 = set(poem_lst)\n",
+    "\n",
+    "new_dict = {}\n",
+    "for word in set1:\n",
+    "    new_dict[word]= poem_lst.count(word)\n",
+    "\n",
+    "print(new_dict)"
    ]
   },
   {
