--- a/Lab_Duel-Of-Sorcerers.ipynb
+++ b/Lab_Duel-Of-Sorcerers.ipynb
@@ -107,6 +107,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "or:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells = len(gandalf)\n",
+    "    \n",
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0\n",
+    "\n",
+    "def clash_wins (sorcerer1, sorcerer2, spells):\n",
+    "    global gandalf_wins #global keyword allows you to modify the variable outside of the current scope\n",
+    "    global saruman_wins\n",
+    "    for spell in range(spells):\n",
+    "        \n",
+    "        if sorcerer1[spell] > sorcerer2[spell]:\n",
+    "            gandalf_wins +=1\n",
+    "        else:\n",
+    "            saruman_wins += 1\n",
+    "    return (gandalf_wins, saruman_wins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 4)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clash_wins (gandalf, saruman, spells)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gandalf_wins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 4. Who won the battle?\n",
     "Print `Gandalf wins`, `Saruman wins` or `Tie` depending on the result. "
    ]
