--- a/Customer_Analysis_Case_Study/Data/Total Claim Amount.ipynb
+++ b/Customer_Analysis_Case_Study/Data/Total Claim Amount.ipynb
@@ -439,8 +439,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numerical = tca.select_dtypes(include='number')\n",
-    "categorical = tca.select_dtypes(include='object')"
+    "numerical = tca.select_dtypes(include='number') #numerical data set\n",
+    "categorical = tca.select_dtypes(include='object') #categorical data set"
    ]
   },
   {
@@ -1017,6 +1017,7 @@
     }
    ],
    "source": [
+    "#Here we used the seaborn library to construct distribution plots for the numerical variables\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "# set a grey background (use sns.set_theme() if seaborn version 0.11.0 or above)\n",
@@ -1033,7 +1034,7 @@
     "sns.histplot(data=numerical, x=\"number_of_policies\", kde=True, color=\"gold\", ax=axs[1, 2])\n",
     "sns.histplot(data=numerical, x=\"total_claim_amount\", kde=True, color=\"teal\", ax=axs[1, 3])\n",
     "\n",
-    "plt.show()"
+    "plt.show() #all the elements (plot)"
    ]
   },
   {
@@ -1053,7 +1054,7 @@
     }
    ],
    "source": [
-    "#Here I'm using the Matplotlib library to construct distribution plots for the numerical variables\n",
+    "#Here we used the Matplotlib library to construct distribution plots for the numerical variables\n",
     "fig2, axes2 = plt.subplots(2,4,figsize = (20,20))\n",
     "axes2[0,0].hist(numerical['customer_lifetime_value'],bins=20,color='skyblue', label='customer lifetime value')\n",
     "axes2[0,1].hist(numerical['income'],bins=20, color='olive',label='income')\n",
@@ -1143,7 +1144,7 @@
     }
    ],
    "source": [
-    "sns.pairplot(numerical)"
+    "sns.pairplot(numerical) #check the multicollinearity between the input features"
    ]
   },
   {
@@ -1193,7 +1194,7 @@
     }
    ],
    "source": [
-    "g = sns.PairGrid(numerical)\n",
+    "g = sns.PairGrid(numerical) #check the multicollinearity between the input features\n",
     "g.map(sns.scatterplot)"
    ]
   },
