--- a/Customer_Analysis_Case_Study/LabLinearRegression.ipynb
+++ b/Customer_Analysis_Case_Study/LabLinearRegression.ipynb
@@ -2733,7 +2733,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegression()    # model     #Modeling using Scikit Learn"
+    "model = LinearRegression()    # \"now I'm ready to model\"     #Modeling using Scikit Learn"
    ]
   },
   {
