--- a/Spotity Lab Wed.ipynb
+++ b/Spotity Lab Wed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d181355c",
+   "id": "f8492ae9",
    "metadata": {},
    "source": [
     "Spotify - builing a pandas dataframe"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7b2adabf",
+   "id": "8a3155bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "206cb604",
+   "id": "406b1b06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "adbbeba7",
+   "id": "a317a6c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,20 +42,19 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "a786994c",
+   "id": "d8625d8c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import spotipy     #to ease the access to the Spotify library (for developers)\n",
     "import json\n",
-    "from spotipy.oauth2 \n",
-    "import SpotifyClientCredentials"
+    "from spotipy.oauth2 import SpotifyClientCredentials"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "95bd94f4",
+   "id": "d96c9160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "25a86fcd",
+   "id": "2c2ae066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "252f5dbe",
+   "id": "7d0be04a",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "97b92349",
+   "id": "f9f8f8fb",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "c7bf58f4",
+   "id": "bcc2bdcb",
    "metadata": {},
    "source": [
     "#exercise\n",
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b8891e1",
+   "id": "d76a46db",
    "metadata": {},
    "source": [
     "limit = len(my_list)\n",
@@ -158,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8f0ca970",
+   "id": "ba381a22",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "695afa70",
+   "id": "60bb1271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,27 +188,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a5523d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 102,
-   "id": "a5a949ee",
+   "id": "cb772e90",
    "metadata": {},
    "outputs": [],
    "source": [
     "username = 'spotify'\n",
-    "#playlist_id = '37i9dQZF1DXbITWG1ZJKYt'"
+    "playlist_id = '37i9dQZF1DXbITWG1ZJKYt'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "94d0d600",
+   "id": "9a159cd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,17 +211,17 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "d7c1c54c",
+   "id": "e81e6cf3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_playlists2 = [ '5fo41o54DPTvdPO2uMTDH1', '0OzgFmOBqTe6CHNgJk9zpT', '4c8MUTW1ipZsO7lM9t8BIa']"
+    "list_of_playlists2 = [ '5fo41o54DPTvdPO2uMTDH1', '0OzgFmOBqTe6CHNgJk9zpT', '4c8MUTW1ipZsO7lM9t8BIa'] #0OzgFmOBqTe6CHNgJk9zpT -> sleep"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "9c9a45bc",
+   "id": "9ab0addd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,8 +233,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 161,
+   "id": "ea8f9bdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_tracks=[]\n",
+    "\n",
+    "for playlist_id in list_of_playlists:\n",
+    "    list_of_tracks.extend(get_playlist_tracks(username, playlist_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 120,
-   "id": "5dcb1654",
+   "id": "8ecedd13",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "17ab63f5",
+   "id": "b0f1011d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,17 +278,17 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "2970952f",
+   "id": "c23f45cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_audio_features = [i for i in list_of_audio_features if i]"
+    "list_of_audio_features = [i for i in list_of_audio_features if i] #to skip null values (dictionaries)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "d2d50c02",
+   "id": "f948530a",
    "metadata": {
     "scrolled": true
    },
@@ -307,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "7c57b8e3",
+   "id": "6dce00a3",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "5f0a9f9d",
+   "id": "82f2d813",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "4b1c5228",
+   "id": "32e26978",
    "metadata": {
     "scrolled": true
    },
@@ -1073,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "12aa8197",
+   "id": "36c88b03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "950bdbd6",
+   "id": "cb478b1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "28846250",
+   "id": "ef941a28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "17c9f9f1",
+   "id": "bf298f71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "9648ba07",
+   "id": "b7ace86e",
    "metadata": {},
    "outputs": [
     {
@@ -10964,14 +10968,14 @@
     }
    ],
    "source": [
-    "playlist1=get_playlist_tracks(\"spotify\", \"5fo41o54DPTvdPO2uMTDH1\")\n",
-    "playlist1"
+    "#playlist1=get_playlist_tracks(\"spotify\", \"5fo41o54DPTvdPO2uMTDH1\")\n",
+    "#playlist1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "45a78611",
+   "id": "bb3b5c30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10990,7 +10994,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "d56a013d",
+   "id": "33df332b",
    "metadata": {},
    "outputs": [
     {
@@ -13728,7 +13732,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "81609162",
+   "id": "56122130",
    "metadata": {},
    "outputs": [
     {
@@ -14105,7 +14109,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "576e08e1",
+   "id": "954539b0",
    "metadata": {},
    "outputs": [
     {
@@ -14143,7 +14147,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "0113aebc",
+   "id": "259c1d89",
    "metadata": {},
    "outputs": [
     {
@@ -14395,8 +14399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "b86d2ee7",
+   "execution_count": 172,
+   "id": "cf6f4a58",
    "metadata": {},
    "outputs": [
     {
@@ -14636,7 +14640,7 @@
        "[4813 rows x 11 columns]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14650,8 +14654,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 165,
+   "id": "98d68b69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv (\"/Users/juliamarques/Documents/GitHub/IronhackLab/spotifycluster.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "47cb2638",
+   "id": "0a3f7b8d",
    "metadata": {},
    "outputs": [],
    "source": []
