Update Comparing regression models.ipynb

--- a/Comparing regression models.ipynb
+++ b/Comparing regression models.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9b07abbd",
+   "id": "109b3b60",
    "metadata": {},
    "source": [
-    " - Comparing regression models -"
+    " <Comparing regression models>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2597f6b",
+   "metadata": {},
+   "source": [
+    " - Comparing regression models"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "729f59d1",
+   "id": "c49849bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0158a453",
+   "id": "3b5bd9b9",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2e10a7ce",
+   "id": "e9286408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1dad8716",
+   "id": "176257e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bd03efb0",
+   "id": "b2e679e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2c4a41fa",
+   "id": "860f2287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "23a0ee71",
+   "id": "548c0631",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e82a208c",
+   "id": "adb9668c",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5a68523a",
+   "id": "54581da5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330a2fd9",
+   "id": "980955c9",
    "metadata": {},
    "source": [
     "Embedded Methods"
@@ -700,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "901d475d",
+   "id": "9cf3c891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "92f20369",
+   "id": "b2530322",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cbdf3160",
+   "id": "e79b0e4b",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "60685378",
+   "id": "9d1e82a1",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6dc06864",
+   "id": "b1f6e00e",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d1f51e",
+   "id": "6778b253",
    "metadata": {},
    "source": [
     "P-value"
@@ -814,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e7a2a1ef",
+   "id": "ee2e6903",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c069ebc9",
+   "id": "1832b4cb",
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f87be62e",
+   "id": "baf8ea40",
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6c65d778",
+   "id": "85b98aae",
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "82a6945f",
+   "id": "690904b2",
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1543885",
+   "id": "8c200a7c",
    "metadata": {},
    "outputs": [],
    "source": []
